--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,25 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
+
 *,
 *::before,
 *::after {
   margin: 0;
   padding: 0;
+  outline: none; /* no blue line around button*/
   box-sizing: inherit;
 }
 
 /* Root element */
 html {
-  font-size: 62.5%; /* 62.5% of 16px = 10px */
+  font-size: 30px;
 }
 
 body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   box-sizing: border-box;
@@ -26,4 +30,7 @@ $s-size: 1.2rem;
 $m-size: 1.6rem;
 $l-size: 3.2rem;
 $xl-size: 4.8rem;
+
+html {
+  font-size: 62.5%; /* 62.5% of 16px = 10px 
 */
